syntax = "proto3";

package opendut.model.topology;

import "opendut/model/topology/device.proto";

message Topology {
  repeated DeviceDescriptor device_descriptors = 1;
}
