syntax = "proto3";

package opendut.types.topology;

import "opendut/types/util/uuid.proto";
import "opendut/types/util/net.proto";

message DeviceId {
  opendut.types.util.Uuid uuid = 1;
}

message DeviceDescriptor {
  opendut.types.topology.DeviceId id = 1;
  opendut.types.topology.DeviceName name = 2;
  opendut.types.topology.DeviceDescription description = 3;
  opendut.types.util.NetworkInterfaceDescriptor interface = 4;
  repeated opendut.types.topology.DeviceTag tags = 5;
}

message DeviceName {
  string value = 1;
}

message DeviceDescription {
  string value = 1;
}

message DeviceTag {
  string value = 1;
}
